--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "wrangler": "^4.30.0"
   },
   "dependencies": {
     "svelte": "^5.0.0"
